--- a/SuperCars/style.css
+++ b/SuperCars/style.css
@@ -27,7 +27,7 @@ h2{
 
 img{
    display: block;
-   width: 92%;
+   width: 85%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1.5rem;
@@ -103,6 +103,7 @@ button:hover{
         flex-direction: row;
         justify-content: flex-end;
         margin-right: 1rem;
+        margin-bottom: 2rem;
     }
   
 }
