--- a/SuperCars/style.css
+++ b/SuperCars/style.css
@@ -28,6 +28,7 @@ h2{
 img{
    display: block;
    width: 85%;
+   max-width: 86%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1.5rem;
