--- a/SuperCars/style.css
+++ b/SuperCars/style.css
@@ -27,8 +27,8 @@ h2{
 
 img{
    display: block;
-   width: 85%;
-   max-width: 86%;
+   width: 60%;
+   max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1.5rem;
@@ -57,11 +57,12 @@ button:hover{
 
 }
 .bodytext{
- 
-    border: solid rgb(200, 198, 198);
+     width: 65%;
+    border: solid rgb(52, 49, 57);
     padding: 1rem;
-    text-align: center;
-    margin: 0.3rem 0.3rem;
+    margin-left: auto;
+    margin-right: auto;
+  
 }
 .para{
     display: none;
@@ -86,6 +87,7 @@ button:hover{
 .light-mode button{
 
     background: #163a7d;
+    border:solid rgb(180, 180, 180);
 }
 .light-mode .p{
     color: rgb(34, 37, 35);
@@ -106,6 +108,21 @@ button:hover{
         margin-right: 2rem;
         margin-bottom: 3rem;
     }
+
+img{
+    display: block;
+    width: 85%;
+    max-width: 86%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    border-radius: 14px;
+ }
+
+ .bodytext{
+    width: 75%;
+ }
   
 }
 .fa-angle-left,.fa-chevron-right{
